--- a/app/src/main/res/layout/activity_group_plan_select_location.xml
+++ b/app/src/main/res/layout/activity_group_plan_select_location.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.GroupPlanRouteActivity">
+    tools:context=".activity.GroupPlanSelectLocationActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/layout_header"
@@ -34,22 +34,13 @@
             app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <EditText
-        android:id="@+id/edit_search"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:layout_marginHorizontal="10dp"
-        android:layout_marginBottom="5dp"
-        app:layout_constraintBottom_toTopOf="@id/map"
-        app:layout_constraintTop_toBottomOf="@+id/layout_header" />
-
     <fragment
         android:id="@+id/map"
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/edit_search"
+        app:layout_constraintTop_toTopOf="parent"
         tools:context=".MapsActivity" />
 
     <Button
@@ -62,5 +53,15 @@
         android:text="선택 완료"
         app:layout_constraintBottom_toBottomOf="parent" />
 
+    <androidx.appcompat.widget.AppCompatImageView
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:src="@drawable/ic_place_black_24dp"
+        app:tint="#FF0000"
+        android:layout_marginBottom="48dp"
+        android:layout_width="48dp"
+        android:layout_height="48dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
