위도경로 POST및 GET 완료

--- a/app/src/main/res/layout/activity_group_plan_add.xml
+++ b/app/src/main/res/layout/activity_group_plan_add.xml
@@ -67,6 +67,7 @@
             <EditText
                 android:id="@+id/plan_add_location"
                 android:hint="장소"
+                android:clickable="false"
                 android:focusable="false"
                 android:layout_margin="15dp"
                 android:layout_width="match_parent"
