아이디찾기 완료

--- a/app/src/main/res/layout/auth_dialog.xml
+++ b/app/src/main/res/layout/auth_dialog.xml
@@ -27,7 +27,7 @@
         android:textAlignment="center" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/auth_dialog_time_counter"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginVertical="10dp"
