--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -101,32 +101,17 @@
         app:layout_constraintTop_toBottomOf="@id/login_signup" />
 
     <TextView
-        android:id="@+id/login_find_id"
+        android:id="@+id/login_find_idpw"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/custom_button"
         android:clickable="true"
         android:focusable="true"
         android:foreground="?android:attr/selectableItemBackground"
-        android:text="아이디찾기"
+        android:text="아이디 / 비밀번호 찾기"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textColor="#2196F3"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@id/login_find_pwd"
-        app:layout_constraintTop_toBottomOf="@id/login_text2" />
-
-    <TextView
-        android:id="@+id/login_find_pwd"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/custom_button"
-        android:clickable="true"
-        android:focusable="true"
-        android:foreground="?android:attr/selectableItemBackground"
-        android:text="비밀번호 찾기"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        android:textColor="#2196F3"
-        app:layout_constraintLeft_toRightOf="@id/login_find_id"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/login_text2" />
 
